Fix broken layout caused by Khmer translation and update some form layout

--- a/app/assets/stylesheets/clients/index.scss
+++ b/app/assets/stylesheets/clients/index.scss
@@ -148,10 +148,14 @@
   .dataTables_info {
     padding-top: 15px;
   }
+
+  .client-option {
+    line-height: 38px;
+  }
+
   @media screen and (max-width: 700px){
     .client-option {
-      // margin-top: 30px;
-      a{
+      a {
         display: inline-block;
         margin-top: 8px;
       }
